bk_ida/gccida/c0/dwarf2out_init
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dwarf2out_init/src/dwarf2out.c:12495:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 >= DINFO_LEVEL_VERBOSE ) 
                    ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dwarf2out_init/src/obj/dwarf2out.o] Error 1
